--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
@@ -187,6 +188,7 @@ allow 172.234.228.174;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.93.1.27;
 allow 173.224.219.172;
 allow 173.224.219.236;
 allow 173.224.219.44;
@@ -720,6 +722,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:f9a1::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -959,6 +962,7 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fccf:100:3::14;
+allow 2604:2280:dead:beef:be24:11ff:fe6c:285a;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
