--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -103,6 +103,7 @@ deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:b011:4006:f9a1::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -148,6 +149,7 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fccf:100:3::14;
+deny 2604:2280:dead:beef:be24:11ff:fe6c:285a;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:a00:101:4:216:3eff:fe2f:1c84;
 deny 2604:a00:101:4:216:3eff:fe2f:20c3;
