--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -101,6 +101,7 @@ set_real_ip_from 109.71.252.182;
 set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
@@ -187,6 +188,7 @@ set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
+set_real_ip_from 172.93.1.27;
 set_real_ip_from 173.224.219.172;
 set_real_ip_from 173.224.219.236;
 set_real_ip_from 173.224.219.44;
@@ -720,6 +722,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:f9a1::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -959,6 +962,7 @@ set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fccf:100:3::14;
+set_real_ip_from 2604:2280:dead:beef:be24:11ff:fe6c:285a;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:1c84;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:20c3;
