--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -103,7 +103,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:f9a1::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -238,7 +237,6 @@ allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:147;
 allow 2620:18c:0:192::e0:152;
-allow 2620:18c:0:192::e0:153;
 allow 2620:18c:0:192::e0:155;
 allow 2620:18c:0:192::e0:156;
 allow 2620:18c:0:192::e0:157;
@@ -274,7 +272,6 @@ allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
 allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
-allow 2620:18c:0:192::e0:196;
 allow 2620:18c:0:192::e0:197;
 allow 2620:18c:0:192::e0:198;
 allow 2620:18c:0:192::e0:200;
@@ -293,7 +290,6 @@ allow 2620:18c:0:192::e0:218;
 allow 2620:18c:0:192::e0:219;
 allow 2620:18c:0:192::e0:220;
 allow 2620:18c:0:192::e0:221;
-allow 2620:18c:0:192::e0:224;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
 allow 2800:ba0:2:ee01::7583;
@@ -647,6 +643,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:133;
